# gpu-crypto-trading-demo

./: .claude-mcp-config.json  .eslintignore  .gitignore  .mcp-windows-optimized.json  .prettierignore  .prettierrc  BRANCH_ANALYSIS_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_MSI_GUIDE.md  BUILD_MSI_NOW.bat  BUILD_WINDOWS.md  Cargo.toml  Dockerfile.windows  EXPECTED_OUTPUT.md  FIX_BUILD_ERROR.md  GITHUB_ACTIONS_WORKFLOW.yml  MCP_SETUP.md  MERGE_COMPLETION_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  PREVIEW.md  PROJECT_ANALYSIS_AND_TODO.md  QUICK_BUILD_FIX.md  README.md  SECURITY.md  SIMULATED_BUILD_OUTPUT.md  TRADING_BOT_ANALYSIS.md  TRADING_BOT_FIX_PLAN.md  USER_EXPERIENCE_ANALYSIS.md  UX_QUICK_FIXES.md  WINDOWS_BUILD_RECOMMENDATIONS.md  build-all.sh  build-linux.sh  build-windows.ps1  build_fix.bat  build_msi.bat  build_windows.bat  build_windows_enhanced.bat  build_windows_nvidia.md  ecosystem.config.cjs  eslint.config.js  (+18 more)
.github/workflows/: build-release.yml  build-windows.yml
.storybook/: main.ts  preview.ts
docs/: AGENT-SYSTEM-README.md  BOT_TAB_DEEP_ANALYSIS_REPORT.md  README.md  api-documentation.md
docs/api/: trading.md
docs/deployment/: installation.md
docs/security/: threat-model.md
preview-server/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
preview-server/src/: main.js  style.css
public/: particle-worker.js
src/: App.improved.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  PROJECT_ANALYSIS_AND_TODO.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: create_icons.py
src-tauri/src/: advanced_risk_manager.rs  atomic_operations.rs  auth.rs  backtesting.rs  binance_client.rs  cache.rs  commands.rs  config.rs  connection_pool.rs  cpu_worker.rs  enhanced_lro.rs  enhanced_risk_manager.rs  errors.rs  gpu_memory_manager.rs  gpu_neural_predictor.rs  gpu_renderer.rs  gpu_risk_manager.rs  gpu_trading.rs  gpu_trading_engine.rs  logging.rs  main.rs  models.rs  optimized_lro.rs  particle_compute.wgsl  performance_cache.rs  portfolio_manager.rs  rate_limiter.rs  secure_commands.rs  secure_path.rs  secure_storage.rs  secure_string.rs  trading_strategy.rs  validation.rs  websocket.rs
src-tauri/src/advanced_trading/: mod.rs  order_management.rs  portfolio_analytics.rs  risk_engine.rs  technical_analysis.rs
src-tauri/src/commands/: advanced_trading.rs  backtesting.rs  bot.rs  gpu_native.rs  mod.rs  settings.rs  system.rs  trading.rs  validation.rs
src-tauri/src/market_intelligence/: correlation_engine.rs  mod.rs  news_intelligence.rs  sentiment_analysis.rs
src-tauri/src/native_gpu/: compute_kernels.rs  cuda.rs  directx12.rs  metal.rs  mod.rs  opencl.rs  vulkan.rs
src-tauri/src/services/: market_data_service.rs  mod.rs  trading_service.rs
src-tauri/src/shaders/: indicators_compute.wgsl  lro_compute.wgsl
src-tauri/src/tests/: backtesting_tests.rs  enhanced_lro_tests.rs  gpu_operations_tests.rs  integration_tests.rs  mod.rs  risk_management_tests.rs  security_tests.rs  trading_strategy_tests.rs  validation_tests.rs
src-tauri/src/trading_strategy/: config.rs  market_analysis.rs  mod.rs
src-tauri/tests/: bot_ui_tests.spec.ts  secure_storage_tests.rs  trading_logic_tests.rs  validation_tests.rs
src/components/: AdvancedAnalytics.tsx  Dashboard.tsx  ErrorBoundary.tsx  GpuSelector.tsx  HelpTooltip.tsx  LoadingProgress.tsx  Navigation.tsx  ParticleCanvas.tsx  PnLChart.tsx  SettingsPanel.tsx  SimpleDashboard.tsx  SimpleTradeForm.tsx  StatsPanel.tsx  SwingBotPanel.tsx  TitleBar.tsx  TradePanel.tsx  TutorialPanel.tsx  UserFriendlyError.tsx  WelcomeModal.tsx
src/components/__tests__/: Dashboard.test.tsx  SettingsPanel.test.tsx  TradePanel.test.tsx
src/components/advanced/: AdvancedTradingPanel.tsx
src/components/asset/: AssetManagerPanel.tsx  AutomatedAssetManagerStatus.tsx  AutomationConfigPanel.tsx
src/components/bot/: BotConfigForm.tsx  BotControlPanel.tsx  BotOnboardingModal.tsx  BotStatusPanel.tsx  ErrorBoundary.tsx  ImprovedBotConfigForm.backup.tsx  ImprovedBotConfigForm.tsx  MarketConditions.tsx  PerformanceMetrics.tsx  PositionStatus.tsx  PresetSelector.tsx  RecentSignals.tsx  SignalChart.tsx  VirtualPortfolio.tsx
src/components/charts/: GpuAcceleratedChart.tsx
src/components/common/: ApiStatus.tsx  AppLoading.tsx  Button.tsx  ConfigInput.tsx  ConfigurationSection.tsx  ConfirmationModal.tsx  FloatingHelpButton.tsx  HelpButton.tsx  Input.tsx  LoadingSkeleton.tsx  MarketOverview.tsx  Modal.tsx  NotificationContainer.tsx  OnboardingBanner.tsx  PnLDisplay.tsx  (+8 more)
src/contexts/: ThemeContext.tsx
src/hooks/: useAdvancedTrading.ts  useAnalytics.ts  useAutomatedAssetManager.ts  useBotConfig.ts  useBotData.ts  useFormValidation.ts  usePortfolioMetrics.ts  useRiskAssessment.ts  useTechnicalAnalysis.ts  useTrades.ts  useUserProfile.ts  useValidation.ts
src/services/: BinanceService.ts  WebSocketManager.ts
src/styles/: accessibility.css  design-tokens.css  enhanced-components.css  index.css  z-index.css
src/test/: README.md  asset-manager-panel.test.tsx  automation-config-panel.test.tsx  setup.ts  test-runner.ts
src/types/: assetManagement.ts  bot.ts
src/utils/: actionHistory.ts  assetManager.ts  automationTriggers.ts  botHelpers.ts  botPresets.ts  errorHandling.ts  formatters.ts  helpContent.ts  inputSanitizer.ts  notifications.ts  performance.ts  secureStorage.ts  securityHeaders.ts  sessionManager.ts  tauri.ts  themes.ts  validation.ts
tests/playwright/: trading-workflows.spec.ts
(+53 files in other folders)
