[package]
name = "crypto_trader"
version = "0.1.0"
description = "GPU/CPU Crypto Trading Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0"

# Existing dependencies from root Cargo.toml
wgpu = "0.20"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust_decimal = "1.35"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
tempfile = "3.8"
url = "2.5"
futures-intrusive = "0.5"
sysinfo = "0.30"
tokio-tungstenite = "0.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devUrl` is an URL
default = ["custom-protocol", "gpu-optimized"]
# this feature is used used for production builds where `devUrl` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# GPU optimization features
gpu-optimized = []
nvidia-cuda = []
windows-optimized = ["wgpu/dx12"]
